--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div style="background-image: url(../UX_UI_HW_17/images/LargestDotBG.png);">
         <header class="headerNav">
             <p class="name h1">Christa Rodriguez</p>
             <div class="navBar">
@@ -76,6 +75,26 @@
                 <li>Presenting</li>
             </ul>
         </div>
+    </section>
+
+    <section class="caseStudyContainer">
+        <p class="caseStudyTitle h2">Case Studies</p>
+        <div class="caseStudies">
+            <div class="mrdRedo">
+                <div class="neonMrd"> <img src="images/MRD CaseStudy.png" alt="Neon Lights Madison Roller Derby Logo"></div>
+                <p class="mrdTitle h2">Madison Roller Derby Site Redesign</p>
+                <p class="mrdSummery p">This website redesign focused on bringing balance the athleticism of roller derby with the personality it is known for. Direct league interaction and feedback were utilized to create something to draw in fans and direct them to ticket sales and merchandise.</p>
+            </div>
+            <div class="sageApp">
+                <div class="sageScreen"> <img src="images/Sage Case Study.png" alt="Sage Loading Screen"></div>
+                <p class="sageTitle h2">Sage Garden Advice App</p>
+                <p class="sageSummery p">This project focued on reserching gardeners’ pain points and how they could be address with the creation of an app that condenced multiple resouces into one. The guidence provided benefits gardeners of all levels, and the calming aesthetics of the app helps create a more relaxing gardening experience.</p>
+            </div>
+            <div class="untetheredApp">
+                <div class="untetheredScreen"> <img src="images/Untethered.png" alt="Untethered Splash Screen"></div>
+                <p class="untetheredTitle h2">Untethered Workcation App</p>
+                <p class="untetheredSummery p">A research focused project, gathering  information on what people would like to see in a travel app for a post pandemic world. The reserch was then turned into a Mid-Fi prototype with a focus on creating a user friendly onbarding process.</p>
+            </div>
     </section>
 
     <footer>
