FIXED THE THING!
I CENTERED MY CASESTUDY BOXES AFTER AN HOUR!

--- a/index.html
+++ b/index.html
@@ -18,62 +18,68 @@
     </header>
 
     <section class="skillsContainer">
-        <div="uxSkills">
-            <p class="skillsTitle h1">UX Skills</p>
+        <p class="skillsTitle h2">UX Skills</p>
+        <div class="uxSkills">
             <div class="userResearch">
-                <p class="urTitle h2">User Research</p>
+                <p class="urTitle h3">User Research</p>
                 <p class="urSummeryOne p">I like to have a wide base of quantitative data, to dial in my interviews.</p>
                 <p class="urSummeryTwo p">Anthropology makes ethnography second nature to me, but UX training has let me streamline the process.</p>
             </div>
             <div class="userEmpathy">
-                <p class="ueTitle h2">User Empathy</p>
+                <p class="ueTitle h3">User Empathy</p>
                 <p class="ueSummery p">A person can tell you what they think they want, but you have to listen to the spaces between their words to understand how their feelings inform what they’re saying.</p>
             </div>
             <div class="qualInter">
-                <p class="qiTitle h2">Qualitative Interviews</p>
+                <p class="qiTitle h3">Qualitative Interviews</p>
                 <p class="qiSummery p">I love to get people to tell me their stories. That’s where the real insight comes from. When you lead them to a place they feel comfortable, they’ll tell you exactly what they think.</p>
             </div>
         </div>
     </section>
 
-    <section class="tooBoxContainer">
+    <section class="toolBoxContainer">
         <div class="toolBox">
             <p class="toolBoxTitle h2">Tool Box</p>
         </div>
         <div class="toolLists">
-            <h3 class="urListTitle">User Research</h3>
-            <ul class="urList">
-                <li>Affinity Diagrams</li>
-                <li>Card Sorting</li>
-                <li>Data Synthesis</li>
-                <li>Data Analysis</li>
-                <li>Survey Creation</li>
-                <li>Interview Planning</li>
-                <li>Interviews</li>
-                <li>User Observation</li>
-            </ul>
-            <h3 class="swListTitle">Software</h3>
-            <ul class="swList">
-                <li>Figma</li>
-                <li>InVision</li>
-                <li>Microsoft Office Suite</li>
-                <li>Adobe Creative Suite</li>
-                <li>GitHub</li>
-                <li>Visual Studio </li>
-            </ul>
-            <h3 class="uiListTitle">User Interface</h3>
-            <ul class="uiList">
-                <li>Copy Writing</li>
-                <li>DataVisualization</li>
-                <li>Storyboarding</li>
-                <li>Redlining</li>
-                <li>Aesthetics</li>
-                <li>Color Theory</li>
-                <li>Communication</li>
-                <li>Collaboration</li>
-                <li>Critiquing</li>
-                <li>Presenting</li>
-            </ul>
+            <div class=listOne>
+                <h3 class="urListTitle">User Research</h3>
+                <ul class="urList">
+                    <li>Affinity Diagrams</li>
+                    <li>Card Sorting</li>
+                    <li>Data Synthesis</li>
+                    <li>Data Analysis</li>
+                    <li>Survey Creation</li>
+                    <li>Interview Planning</li>
+                    <li>Interviews</li>
+                    <li>User Observation</li>
+                </ul>
+            </div>
+            <div class=listTwo>
+                <h3 class="swListTitle">Software</h3>
+                <ul class="swList">
+                    <li>Figma</li>
+                    <li>InVision</li>
+                    <li>Microsoft Office Suite</li>
+                    <li>Adobe Creative Suite</li>
+                    <li>GitHub</li>
+                    <li>Visual Studio </li>
+                </ul>
+            </div>
+            <div class=listThree>
+                <h3 class="uiListTitle">User Interface</h3>
+                <ul class="uiList">
+                    <li>Copy Writing</li>
+                    <li>DataVisualization</li>
+                    <li>Storyboarding</li>
+                    <li>Redlining</li>
+                    <li>Aesthetics</li>
+                    <li>Color Theory</li>
+                    <li>Communication</li>
+                    <li>Collaboration</li>
+                    <li>Critiquing</li>
+                    <li>Presenting</li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -82,18 +88,24 @@
         <div class="caseStudies">
             <div class="mrdRedo">
                 <div class="neonMrd"> <img src="images/MRD CaseStudy.png" alt="Neon Lights Madison Roller Derby Logo"></div>
-                <p class="mrdTitle h2">Madison Roller Derby Site Redesign</p>
-                <p class="mrdSummery p">This website redesign focused on bringing balance the athleticism of roller derby with the personality it is known for. Direct league interaction and feedback were utilized to create something to draw in fans and direct them to ticket sales and merchandise.</p>
+                    <div class="mrdCardText">
+                        <p class="mrdTitle h2">Madison Roller Derby Site Redesign</p>
+                        <p class="mrdSummery p">This website redesign focused on bringing balance the athleticism of roller derby with the personality it is known for. Direct league interaction and feedback were utilized to create something to draw in fans and direct them to ticket sales and merchandise.</p>
+                    </div>
             </div>
             <div class="sageApp">
                 <div class="sageScreen"> <img src="images/Sage Case Study.png" alt="Sage Loading Screen"></div>
-                <p class="sageTitle h2">Sage Garden Advice App</p>
-                <p class="sageSummery p">This project focued on reserching gardeners’ pain points and how they could be address with the creation of an app that condenced multiple resouces into one. The guidence provided benefits gardeners of all levels, and the calming aesthetics of the app helps create a more relaxing gardening experience.</p>
+                <div class="sageCardText">
+                    <p class="sageTitle h2">Sage Garden Advice App</p>
+                    <p class="sageSummery p">This project focued on reserching gardeners’ pain points and how they could be address with the creation of an app that condenced multiple resouces into one. The guidence provided benefits gardeners of all levels, and the calming aesthetics of the app helps create a more relaxing gardening experience.</p>
+                </div>
             </div>
             <div class="untetheredApp">
                 <div class="untetheredScreen"> <img src="images/Untethered.png" alt="Untethered Splash Screen"></div>
-                <p class="untetheredTitle h2">Untethered Workcation App</p>
-                <p class="untetheredSummery p">A research focused project, gathering  information on what people would like to see in a travel app for a post pandemic world. The reserch was then turned into a Mid-Fi prototype with a focus on creating a user friendly onbarding process.</p>
+                <div class=untetheredCardText>
+                    <p class="untetheredTitle h2">Untethered Workcation App</p>
+                    <p class="untetheredSummery p">A research focused project, gathering  information on what people would like to see in a travel app for a post pandemic world. The reserch was then turned into a Mid-Fi prototype with a focus on creating a user friendly onbarding process.</p>
+                </div>
             </div>
     </section>
 
